--- a/src/pages/ProviderRegistration/ProviderRegistration.css
+++ b/src/pages/ProviderRegistration/ProviderRegistration.css
@@ -1,17 +1,15 @@
-/* Provider Dashboard styles */
-
 /* Remove Chrome autofill background */
 .MuiTextField-root .MuiOutlinedInput-root input:-webkit-autofill,
 .MuiTextField-root .MuiOutlinedInput-root input:-webkit-autofill:hover,
 .MuiTextField-root .MuiOutlinedInput-root input:-webkit-autofill:focus,
 .MuiTextField-root .MuiOutlinedInput-root input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px transparent inset !important;
-  -webkit-text-fill-color: #374151 !important;
+  -webkit-text-fill-color: white !important;
   transition: background-color 5000s ease-in-out 0s !important;
 }
 
 /* Ensure autofill works with disabled state */
 .MuiTextField-root .MuiOutlinedInput-root.Mui-disabled input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px transparent inset !important;
-  -webkit-text-fill-color: #9ca3af !important;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0.5) !important;
 }
