--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -129,6 +129,22 @@
   box-shadow: 0 8px 25px rgba(102, 126, 234, 0.2);
 }
 
+/* Remove Chrome autofill background */
+.signup-input .MuiOutlinedInput-root input:-webkit-autofill,
+.signup-input .MuiOutlinedInput-root input:-webkit-autofill:hover,
+.signup-input .MuiOutlinedInput-root input:-webkit-autofill:focus,
+.signup-input .MuiOutlinedInput-root input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
+  -webkit-text-fill-color: #374151 !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+}
+
+/* Ensure autofill works with disabled state */
+.signup-input .MuiOutlinedInput-root.Mui-disabled input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
+  -webkit-text-fill-color: #9ca3af !important;
+}
+
 .terms-checkbox {
   color: #667eea !important;
 }
