--- a/client/src/components/Slideshow/Slideshow.css
+++ b/client/src/components/Slideshow/Slideshow.css
@@ -22,6 +22,17 @@
   z-index: 1;
 }
 
+/* Skeleton Loader */
+.slide-skeleton {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  overflow: hidden;
+}
+
 /* Gradient Overlay */
 .slide-overlay {
   position: absolute;
