--- a/client/src/components/ExperienceCard/ExperienceCard.css
+++ b/client/src/components/ExperienceCard/ExperienceCard.css
@@ -99,6 +99,7 @@
   color: #1f2937;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -129,6 +130,7 @@
   flex: 1;
   display: -webkit-box;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -212,6 +214,12 @@
 }
 
 @media (max-width: 768px) {
+
+  .experience-card {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
   .card-content {
     padding: 1rem;
   }
