--- a/client/src/pages/AboutUs/AboutUs.css
+++ b/client/src/pages/AboutUs/AboutUs.css
@@ -167,7 +167,8 @@
 
 .about-stats-header {
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .about-stats-title {
